# snofokk-analyse

./: .aigenrc  .coverage  .env  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  ACTUAL_PROFESSIONAL_REALITY_CHECK.md  AGENTS.md  CHANGES.md  CONTRIBUTING.md  DOKUMENTASJON_STATUS_FINAL.md  ENDELIG_ANBEFALING_VÆRELEMENTER.md  EXTENDED_WEATHER_ANALYSIS_RESULTS.md  GRAF_LEGENDS_VALIDERT_2025.md  GRENSEVERDIER_VALIDERING.md  IMPLEMENTERING_FULLFØRT.md  MOBILE_FIRST_STEP1.md  PROFESSIONAL_UI_UPGRADE.md  PROSJEKT_STATUS_FULLFØRT.md  README.md  RETTELSER_2025-08-09.md  SNOFOKK_KRITERIER_OPPDATERT_2025.md  STATUS_FINAL_COMPLETE.md  STEP1_SUMMARY.md  STREAMLIT_ENHANCEMENT_STATUS.md  VINDBLAST_SNO_ANALYSE_RESULTAT.md  VINDSTYRKE_LEGEND_VALIDERING.md  VINDTERSKEL_AVVIK_ANALYSE.md  VÆRDATA_KORRELASJON_VALIDERING.md  WEATHER_ELEMENTS_RECOMMENDATION.md  activate_env.ps1  activate_env.sh  agent.md  analyze_complete_weather_elements.py  analyze_extended_19_elements.py  analyze_extended_weather_correlation.py  analyze_maintenance_weather_correlation.py  analyze_validated_weather_correlation.py  app.py  (+33 more)
.streamlit/: config.toml  config_admin.toml  secrets.toml  secrets.toml.example
archive/: prompt.md
components/: __init__.py  performance_cache.py
config/: alert_config.json  mypy.ini  optimized_snowdrift_config.json  pyproject.toml  requirements.txt  test_config.json  test_system_config.json
data/: email_content_20250106.txt  email_content_20250109.txt  email_content_20250110.txt  email_content_20250130.txt  february_2024_weather.json  gullingen_available_elements.json  gullingen_station_candidates.json  plow_map_20250109.htm  plow_map_20250117.htm  plow_map_20250130.htm
docs/: DOKUMENTASJONSSTATUS.md  app_data_utilization_analysis.md  frost_api_reference.md  gullingen_available_elements.md  gullingen_elements_organized.json  implementeringsguide.md  live_conditions_deployment.md  live_conditions_summary.py  ml_grenseverdier_kalibrert.md  ml_grenseverdier_oppsummering.md  ml_kalibrering_ferdig_2025.md  ml_model_vindkast_upgrade.md  ml_weather_analysis_rapport.md  snofokk_analyserapport.md  snofokk_oppsummering.md  terskler_og_validering.md  vintervakt_vedlikeholds_api.md
models/: cluster_scaler.joblib  (+5 more)
(+618 files in other folders)
